@@ -38,7 +38,6 @@
  ****************************************************************************/
 
 #include <nuttx/config.h>
-#ifdef CONFIG_NET
 
 #include <sys/types.h>
 #include <sys/socket.h>
@@ -319,5 +318,3 @@ ssize_t sendto(int sockfd, FAR const void *buf, size_t len, int flags,
 
   return psock_sendto(psock, buf, len, flags, to, tolen);
 }
-
-#endif /* CONFIG_NET */
