@@ -426,6 +426,17 @@ uint16_t udp_callback(FAR struct net_driver_s *dev,
                       FAR struct udp_conn_s *conn, uint16_t flags);
 
 /****************************************************************************
+ * Function: psock_udp_send
+ *
+ * Description:
+ *   Implements send() for connected UDP sockets
+ *
+ ****************************************************************************/
+
+ssize_t psock_udp_send(FAR struct socket *psock, FAR const void *buf,
+                       size_t len);
+
+/****************************************************************************
  * Function: psock_udp_sendto
  *
  * Description:
